Add binder links to notebooks

--- a/code/generate_figures.ipynb
+++ b/code/generate_figures.ipynb
@@ -5,7 +5,16 @@
    "metadata": {},
    "source": [
     "# Figures\n",
-    "This Jupyter notebook shows how all the figures were generated in the paper *Discovery of Physics from Data: Universal Laws and Discrepancy Models.*"
+    "This Jupyter notebook shows how all the figures were generated in the paper *Discovery of Physics from Data: Universal Laws and Discrepancy Models.*\n",
+    "\n",
+    "An interactive version of this notebook is available on [binder](https://mybinder.org/v2/gh/briandesilva/discovery-of-physics-from-data/47f7fd7586464f36c852983346f05ed8a673d500?filepath=code%2Fgenerate_figures.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/briandesilva/discovery-of-physics-from-data/master?filepath=code%2Fgenerate_figures.ipynb)"
    ]
   },
   {
