--- a/code/supplementary_material.ipynb
+++ b/code/supplementary_material.ipynb
@@ -5,7 +5,16 @@
    "metadata": {},
    "source": [
     "# Supplementary material\n",
-    "This notebook generates the figures from the supplementary section of *Discovery of Physics from Data: Universal Laws and Discrepancy Models.*"
+    "This notebook generates the figures from the supplementary section of *Discovery of Physics from Data: Universal Laws and Discrepancy Models.*\n",
+    "\n",
+    "An interactive version of this notebook is available on [binder](https://mybinder.org/v2/gh/briandesilva/discovery-of-physics-from-data/master?filepath=code%2Fsupplementary_material.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/briandesilva/discovery-of-physics-from-data/master?filepath=code%2Fsupplementary_material.ipynb)"
    ]
   },
   {
